test/replaceIndexOutOfBounds8.slq

def main(){
	x:=(0,1);
	(x[2],x[1]):=(x[1],x[2]); /// error
}
